hub/cluster/paste/headscale-internal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-internal
  namespace: paste
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: headscale-internal
  template:
    metadata:
      labels:
        app: headscale-internal
    spec:
      serviceAccountName: headscale-internal
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.86.5
          securityContext:
            capabilities:
              add: [NET_ADMIN]
