hub/cluster/paste/instance.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paste-public
  namespace: paste
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - paste.samcday.com
  parentRefs:
    - name: public
      namespace: ingress-nginx
  rules:
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /
        - method: HEAD
          path:
            type: PathPrefix
            value: /
        - method: OPTIONS
          path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: memos-generic
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paste-internal
  namespace: paste
spec:
  ingressClassName: tailscale
  rules:
    - host: paste-internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos-generic
                port:
                  name: http
  tls:
    - hosts:
        - paste-internal
